# mlops_project

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  docker-compose.yaml  export_model.py  prediction.csv  pyproject.toml  requirements.txt  Отчет.md
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/postprocess/: cfg.yaml
configs/server/: cfg.yaml
configs/training/: cfg1.yaml  cfg2.yaml  default_cfg.yaml
data/: test.csv.dvc  train.csv.dvc
mlops_project/: infer.py  model.py  test.csv  train.csv  train.py
mlruns/0/: meta.yaml
mlruns/0/746bd47f17334434abc8f2c7564fa36a/: meta.yaml
mlruns/997705749893365328/: meta.yaml
mlruns/997705749893365328/0184229c91fd4e4ab8214f252d622373/: meta.yaml
mlruns/997705749893365328/049d000868c646258c15803718b4ba24/: meta.yaml
mlruns/997705749893365328/08883806fb364e2a8045d089fa1485a7/: meta.yaml
mlruns/997705749893365328/473eb151a04b48c28a529bdddf01e5fa/: meta.yaml
mlruns/997705749893365328/6399a226400a4232b51612df848d18dd/: meta.yaml
mlruns/997705749893365328/756725fe0c5b41b99782174fe43d316f/: meta.yaml
mlruns/997705749893365328/825b7870d4df46d8bb0513dacb1e82cd/: meta.yaml
mlruns/997705749893365328/9cc444fe5a544fd493dc642d21b008a4/: meta.yaml
mlruns/997705749893365328/b24aa631ae504c549f2a7ce57e974402/: meta.yaml
mlruns/997705749893365328/c685c4a4559344698fc839f25c91fcff/: meta.yaml
model_repository/catboost_onnx/: config.pbtxt
(+82 files in other folders)
